src/grammars/snapshots/giallo__grammars__injections__tests__injection_9.snap
---
source: src/grammars/injections.rs
description: "L:(meta.script.astro) (meta.lang.json) - (meta source)"
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("meta.script.astro"),
                ),
                Scope(
                    Scope("meta.lang.json"),
                ),
                Not(
                    And(
                        [
                            Scope(
                                Scope("meta"),
                            ),
                            Scope(
                                Scope("source"),
                            ),
                        ],
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
]
